[package]
name = "ctrl"
version = "0.1.0"
edition = "2021"
description = "A powerful library for control, estimation, and optimization"
documentation = "https://docs.rs/ctrl"
readme = "README.md"
homepage = "https://github.com/optimisticside/ctrl"
repository = "https://github.com/optimisticside/ctrl"
license-file = "LICENSE"

[dependencies]
nalgebra = "0.31.1"
num-traits = "0.2.15"
